# ROBOTIS-THORMANG-MPC

thormang3_action_module/include/thormang3_action_module/: action_module.h
thormang3_action_module/src/: action_module.cpp
thormang3_balance_control/include/thormang3_balance_control/: thormang3_balance_control.h
thormang3_balance_control/src/: thormang3_balance_control.cpp
thormang3_base_module/include/thormang3_base_module/: base_module.h
thormang3_base_module/src/: base_module.cpp
thormang3_gripper_module/include/thormang3_gripper_module/: gripper_module.h
thormang3_gripper_module/src/: gripper_module.cpp
thormang3_head_control_module/: CMakeLists.txt  package.xml
thormang3_head_control_module/include/thormang3_head_control_module/: head_control_module.h
thormang3_head_control_module/src/: head_control_module.cpp
thormang3_imu_3dm_gx4/src/: imu_3dm_gx4.cpp
thormang3_kinematics_dynamics/include/thormang3_kinematics_dynamics/: kinematics_dynamics.h
thormang3_kinematics_dynamics/src/: kinematics_dynamics.cpp
thormang3_localization/: CMakeLists.txt  package.xml
thormang3_localization/include/thormang3_localization/: thormang3_localization.h
thormang3_localization/src/: main.cpp  thormang3_localization.cpp
thormang3_manager/: CMakeLists.txt  package.xml
thormang3_manager/config/: THORMANG3.robot  dxl_init.yaml  ft_calibration_data.yaml  ft_data.yaml  offset.yaml
thormang3_manager/launch/: thormang3_manager.launch  thormang3_manager_gazebo.launch
thormang3_manager/src/: thormang3_manager.cpp
thormang3_manipulation_module/include/thormang3_manipulation_module/: manipulation_module.h
thormang3_manipulation_module/src/: manipulation_module.cpp
thormang3_optimization/: CMakeLists.txt  package.xml
thormang3_optimization/src/: thormang3_optimization.cpp
thormang3_walking_module/include/thormang3_walking_module/: walking_module.h
thormang3_walking_module/src/: thormang3_online_walking.cpp  walking_module.cpp
thormang3_wholebody_balance_control/: CMakeLists.txt  package.xml
thormang3_wholebody_balance_control/include/thormang3_wholebody_balance_control/: thormang3_wholebody_balance_control.h
thormang3_wholebody_balance_control/src/: thormang3_wholebody_balance_control.cpp
thormang3_wholebody_module/: CMakeLists.txt  package.xml
thormang3_wholebody_module/config/: _balance_gain.yaml  balance_gain (copy).yaml  balance_gain.yaml  joint_feedback_gain (copy).yaml  joint_feedback_gain.yaml  joint_feedforward_gain.yaml  walking_parm.yaml
thormang3_wholebody_module/include/thormang3_wholebody_module/: joint_control.h  thormang3_kdl.h  walking_control.h  wholebody_control.h  wholebody_module.h
thormang3_wholebody_module/src/: joint_control.cpp  thormang3_kdl.cpp  walking_control.cpp  wholebody_control.cpp  wholebody_module.cpp  wholebody_module.cpp.autosave
thormang3_wholebody_module_msgs/: CMakeLists.txt  package.xml
thormang3_wholebody_module_msgs/srv/: GetJointPose.srv  GetKinematicsPose.srv  GetPreviewMatrix.srv
