<?xml version="1.0"?>
<package>
  <name>thormang3_wholebody_balance_control</name>
  <version>0.1.0</version>
  <description>
    The thormang3_wholebody_balance_control package
    This balance control is based on PD control.
  </description>
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <run_depend>roscpp</run_depend>
</package>
